--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/h1tokiri/tinyapp#readme",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.21.1"
   }
 }
